# ai-news-scraper

./: .gitignore  config.json  main.py  pyproject.toml
readonly_ai/: analysis.py  cli.py  database.py  prompts.py  score.py  summary.py  utils.py
readonly_ai/scrapers/: __init__.py  hackernews.py  reddit.py  rss.py
readonlyai/: cli.py  database.py  score.py  summary.py  utils.py
readonlyai/scrapers/: hackernews.py  reddit.py  rss.py
